--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,10 +25,9 @@
 
 <androidx.recyclerview.widget.RecyclerView
     android:id="@+id/recyclerView"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"/>
-
-
-
-
+    android:layout_width="0dp"
+    android:layout_height="500dp"
+    android:layout_marginTop="16dp"
+    app:layout_constraintEnd_toEndOf="parent"
+    tools:listitem="@layout/product_list" />
 </androidx.drawerlayout.widget.DrawerLayout>
