--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -14,16 +14,13 @@
         android:layout_height="245dp"
         app:layout_constraintStart_toStartOf="parent"/>
 
-    <com.google.android.material.tabs.TabLayout
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="0dp"
+        android:layout_height="500dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:tabGravity="center"
-        android:id="@+id/my_tablayout"
-        app:tabIndicatorHeight="0dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/my_pager">
-    </com.google.android.material.tabs.TabLayout>
-
-
+        tools:listitem="@layout/product_list"
+        app:layout_constraintTop_toBottomOf="@id/my_pager"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
