EoCart New Version 1.0.0 Updated 15/10/2021

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -14,6 +14,17 @@
         android:layout_height="245dp"
         app:layout_constraintStart_toStartOf="parent"/>
 
+    <TextView
+        android:id="@+id/topSellingProducts"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:fontFamily="@font/segoeregular"
+        android:text="@string/top_selling_products"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/my_pager" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
@@ -22,5 +33,5 @@
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         tools:listitem="@layout/product_list"
-        app:layout_constraintTop_toBottomOf="@id/my_pager"/>
+        app:layout_constraintTop_toBottomOf="@id/topSellingProducts"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
