--- a/app/src/main/res/layout/product_list_layout.xml
+++ b/app/src/main/res/layout/product_list_layout.xml
@@ -1,52 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView
+    xmlns:card_view="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    app:cardUseCompatPadding="true"
+    android:layout_margin="2dp"
+    app:cardBackgroundColor="@android:color/white"
+    app:cardCornerRadius="4dp"
+    android:background="?attr/selectableItemBackground"
+    app:cardElevation="3dp"
+    android:foreground="?attr/selectableItemBackground"
+    card_view:cardElevation="4dp"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/productImage"
-        android:layout_width="130dp"
-        android:layout_height="250dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/bd"
-        android:contentDescription="@string/product_image" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/segoebold"
-        android:text="@string/product_title"
-        android:textSize="12sp"
-        app:layout_constraintStart_toStartOf="@+id/productImage"
-        app:layout_constraintTop_toBottomOf="@+id/productImage"
-        tools:layout_editor_absoluteY="201dp" />
+        <ImageView
+            android:id="@+id/product_image"
+            android:layout_width="match_parent"
+            android:layout_height="180dp"/>
 
-    <TextView
-        android:id="@+id/price"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/segoesemibold"
-        android:text="@string/price"
-        android:textSize="14sp"
-        app:layout_constraintStart_toStartOf="@+id/productImage"
-        app:layout_constraintTop_toBottomOf="@+id/title"
-        tools:ignore="MissingConstraints" />
+        <LinearLayout
+            android:layout_marginStart="5dp"
+            android:layout_marginLeft="5dp"
+            android:padding="10dp"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
-        android:drawableLeft="@drawable/ic_baseline_shopping_cart_24"
-        android:text="@string/add_to_cart"
-        android:textSize="10sp"
-        app:layout_constraintEnd_toEndOf="@+id/productImage"
-        app:layout_constraintTop_toBottomOf="@+id/price"
-        tools:ignore="MissingConstraints" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:textColor="@android:color/black"
+                android:textSize="22sp"
+                android:layout_marginBottom="12dp"
+                android:id="@+id/product_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+
+            <TextView
+                android:textSize="19sp"
+                android:id="@+id/product_price"
+                android:textColor="@android:color/holo_red_light"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_gravity="end"
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <ImageButton
+                android:id="@+id/removeItem"
+                android:layout_width="wrap_content"
+                android:paddingHorizontal="16dp"
+                android:paddingVertical="4dp"
+                android:src="@drawable/ic_baseline_shopping_cart_24"
+                android:background="@color/purple_200"
+                android:layout_height="wrap_content"
+                card_view:targetApi="o"/>
+
+            <ImageButton
+                android:id="@+id/addToCart"
+                android:paddingHorizontal="16dp"
+                android:paddingVertical="4dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                card_view:targetApi="o"/>
+
+        </LinearLayout>
+
+
+    </LinearLayout>
+
+</com.google.android.material.card.MaterialCardView>
