--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -15,7 +15,7 @@
         app:showAsAction="ifRoom" />
 
     <item
-        android:id="@+id/search"
+        android:id="@+id/cart"
         android:icon="@drawable/ic_baseline_shopping_cart_header_24"
         android:title="@string/cart"
         android:contentDescription="@string/content_description_cart"
