--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -21,17 +21,64 @@
         android:layout_marginStart="16dp"
         android:fontFamily="@font/segoeregular"
         android:text="@string/top_selling_products"
-        android:textSize="16sp"
+        android:textColor="#000000"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/my_pager" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_width="0dp"
-        android:layout_height="500dp"
-        android:layout_marginTop="16dp"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefreshLayout"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/topSellingProducts">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/products_recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintTop_toBottomOf="@id/topSellingProducts"
+            tools:listitem="@layout/product_list"/>
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+
+    <RelativeLayout
+        android:id="@+id/showCart"
+        android:layout_marginBottom="70dp"
+        android:layout_marginEnd="20sp"
+        android:layout_gravity="bottom|end"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:listitem="@layout/product_list"
-        app:layout_constraintTop_toBottomOf="@id/topSellingProducts"/>
+        >
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/basketButton"
+            android:src="@drawable/ic_baseline_shopping_cart_24_btn"
+            android:tint="@android:color/white"
+            app:fabSize="normal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:padding="8dp"
+            android:layout_marginBottom="25dp"
+            android:elevation="50dp"
+            android:layout_marginStart="5dp"
+            android:textColor="@android:color/white"
+            android:textStyle="bold"
+            android:layout_alignRight="@id/basketButton"
+            android:id="@+id/cart_size"
+            android:textSize="13sp"
+            android:background="@drawable/item_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignEnd="@id/basketButton"
+            tools:targetApi="lollipop"
+            android:layout_marginLeft="15dp"/>
+
+    </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
