--- a/app/src/main/res/layout/product_list_layout.xml
+++ b/app/src/main/res/layout/product_list_layout.xml
@@ -1,83 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView
-    xmlns:card_view="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardUseCompatPadding="true"
-    android:layout_margin="2dp"
-    app:cardBackgroundColor="@android:color/white"
-    app:cardCornerRadius="4dp"
-    android:background="?attr/selectableItemBackground"
-    app:cardElevation="3dp"
-    android:foreground="?attr/selectableItemBackground"
-    card_view:cardElevation="4dp"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <LinearLayout
-        android:orientation="vertical"
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <ImageView
-            android:id="@+id/product_image"
-            android:layout_width="match_parent"
-            android:layout_height="180dp"/>
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="16dp"
+        app:cardBackgroundColor="?attr/colorPrimaryDark"
+        app:cardCornerRadius="4dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
         <LinearLayout
-            android:layout_marginStart="5dp"
-            android:layout_marginLeft="5dp"
-            android:padding="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:background="#FFFFFF"
             android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:padding="8dp">
 
+            <ImageView
+                android:id="@+id/productImage"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:contentDescription="@string/product_image"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/bd" />
 
             <TextView
-                android:textColor="@android:color/black"
-                android:textSize="22sp"
-                android:layout_marginBottom="12dp"
                 android:id="@+id/product_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/rubik_medium"
+                android:padding="2dp"
+                android:text="@string/product_title"
+                android:textAppearance="?attr/textAppearanceHeadline6"
+                android:textSize="12sp" />
 
             <TextView
-                android:textSize="19sp"
                 android:id="@+id/product_price"
-                android:textColor="@android:color/holo_red_light"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_gravity="end"
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <ImageButton
-                android:id="@+id/removeItem"
-                android:layout_width="wrap_content"
-                android:paddingHorizontal="16dp"
-                android:paddingVertical="4dp"
-                android:src="@drawable/ic_baseline_shopping_cart_24"
-                android:background="@color/purple_200"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                card_view:targetApi="o"/>
-
-            <ImageButton
+                android:fontFamily="@font/rubik"
+                android:padding="2dp"
+                android:text="@string/price"
+                android:textAppearance="?attr/textAppearanceBody2"
+                android:textStyle="bold" />
+            <Button
                 android:id="@+id/addToCart"
-                android:paddingHorizontal="16dp"
-                android:paddingVertical="4dp"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                card_view:targetApi="o"/>
+                android:layout_marginTop="2dp"
+                android:drawableStart="@drawable/ic_baseline_shopping_cart_24_btn"
+                android:text="@string/add_to_cart"
+                android:textSize="12sp"
+                app:layout_constraintEnd_toEndOf="@+id/productImage"
+                app:layout_constraintTop_toBottomOf="@+id/price"
+                tools:ignore="MissingConstraints" />
+            <Button
+                android:id="@+id/removeItem"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
+                android:drawableStart="@drawable/ic_baseline_shopping_cart_24_btn"
+                android:text="Remove From Cart"
+                android:textSize="12sp"
+                app:layout_constraintEnd_toEndOf="@+id/productImage"
+                app:layout_constraintTop_toBottomOf="@+id/price"
+                tools:ignore="MissingConstraints" />
 
         </LinearLayout>
 
+    </com.google.android.material.card.MaterialCardView>
 
-    </LinearLayout>
 
-</com.google.android.material.card.MaterialCardView>
+</androidx.constraintlayout.widget.ConstraintLayout>
